Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -847,10 +847,10 @@
   "pli-tv-kd14:14.13.13": "this is a legal issue that isn’t also an accusation. ",
   "pli-tv-kd14:14.13.14": "How’s there a legal issue that’s also an accusation? ",
   "pli-tv-kd14:14.13.15": "A legal issue arising from an accusation is a legal issue and also an accusation. ",
-  "pli-tv-kd14:14.14.1": "(4c) Are there  offenses that are a legal issue arising from an offense? Are there offenses that are not a legal issue? Are there legal issues that are not an offense? Are there legal issues that are also an offense? ",
-  "pli-tv-kd14:14.14.2": "There may be offenses that are a legal issue arising from an offense; there may be offenses that are not a legal issue; there may be legal issues that are not an offense; there may be legal issues that are also an offense. ",
-  "pli-tv-kd14:14.14.3": "How is there an offense that is a legal issue arising from an offense? ",
-  "pli-tv-kd14:14.14.4": "There is a legal issue arising from an offense because of the five classes of offenses; there is a legal issue arising from an offense because of the seven classes of offenses—",
+  "pli-tv-kd14:14.14.1": "(4c) Are there offenses that are also legal issues arising from an offense? Are there offenses that aren’t also legal issues? Are there legal issues that aren’t also offenses? Are there legal issues that are also offenses? ",
+  "pli-tv-kd14:14.14.2": "There are offenses that are also legal issues arising from an offense. There are offenses that aren’t also legal issues. There are legal issues that aren’t also offenses. There are legal issues that are also offenses. ",
+  "pli-tv-kd14:14.14.3": "How’s there an offense that’s also a legal issue arising from an offense? ",
+  "pli-tv-kd14:14.14.4": "There’s a legal issue arising from an offense because of the five classes of offenses, and there’s a legal issue arising from an offense because of the seven classes of offenses—",
   "pli-tv-kd14:14.14.5": "this is an offense that is a legal issue arising from an offense. ",
   "pli-tv-kd14:14.14.6": "How is there an offense that is not a legal issue? ",
   "pli-tv-kd14:14.14.7": "The attainment of stream-entry—",
