Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -851,11 +851,11 @@
   "pli-tv-kd14:14.14.2": "There are offenses that are also legal issues arising from an offense. There are offenses that aren’t also legal issues. There are legal issues that aren’t also offenses. There are legal issues that are also offenses. ",
   "pli-tv-kd14:14.14.3": "How’s there an offense that’s also a legal issue arising from an offense? ",
   "pli-tv-kd14:14.14.4": "There’s a legal issue arising from an offense because of the five classes of offenses, and there’s a legal issue arising from an offense because of the seven classes of offenses—",
-  "pli-tv-kd14:14.14.5": "this is an offense that is a legal issue arising from an offense. ",
-  "pli-tv-kd14:14.14.6": "How is there an offense that is not a legal issue? ",
+  "pli-tv-kd14:14.14.5": "this is an offense that’s also a legal issue arising from an offense. ",
+  "pli-tv-kd14:14.14.6": "How’s there an offense that isn’t also a legal issue? ",
   "pli-tv-kd14:14.14.7": "The attainment of stream-entry—",
-  "pli-tv-kd14:14.14.8": "this is an attainment/offense that is not a legal issue. ",
-  "pli-tv-kd14:14.14.9": "How is there a legal issue that is not an offense? ",
+  "pli-tv-kd14:14.14.8": "this is an attainment/offense that isn’t also a legal issue. ",
+  "pli-tv-kd14:14.14.9": "How’s there a legal issue that isn’t also an offense? ",
   "pli-tv-kd14:14.14.10": "A legal issue arising from business, a legal issue arising from a dispute, a legal issue arising from an accusation—",
   "pli-tv-kd14:14.14.11": "this is a legal issue that is not an offense. ",
   "pli-tv-kd14:14.14.12": "How is there a legal issue that is also an offense? ",
