--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -862,7 +862,7 @@
   "pli-tv-kd14:14.14.13": "A legal issue arising from an offense is a legal issue and also an offense. ",
   "pli-tv-kd14:14.15.1": "(4d) Is there business that’s also a legal issue arising from business? Is there business that isn’t also a legal issue? Are there legal issues that aren’t also business? Are there legal issues that are also business? ",
   "pli-tv-kd14:14.15.2": "There’s business that’s also a legal issue arising from business. There’s business that’s not a legal issue. There are legal issues that aren’t also business. There are legal issues that are also business. ",
-  "pli-tv-kd14:14.15.3": "How is there business that is a legal issue arising from business? ",
+  "pli-tv-kd14:14.15.3": "How’s there business that’s also a legal issue arising from business? ",
   "pli-tv-kd14:14.15.4": "Whatever is the duty or the business of the Sangha—a legal procedure consisting of getting permission, a legal procedure consisting of one motion, a legal procedure consisting of one motion and one announcement, a legal procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.15.5": "this is business that is a legal issue arising from business. ",
   "pli-tv-kd14:14.15.6": "How is there business that is not a legal issue? ",
