Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -864,8 +864,8 @@
   "pli-tv-kd14:14.15.2": "There’s business that’s also a legal issue arising from business. There’s business that’s not a legal issue. There are legal issues that aren’t also business. There are legal issues that are also business. ",
   "pli-tv-kd14:14.15.3": "How’s there business that’s also a legal issue arising from business? ",
   "pli-tv-kd14:14.15.4": "Whatever is the duty or the business of the Sangha—a legal procedure consisting of getting permission, a legal procedure consisting of one motion, a legal procedure consisting of one motion and one announcement, a legal procedure consisting of one motion and three announcements—",
-  "pli-tv-kd14:14.15.5": "this is business that is a legal issue arising from business. ",
-  "pli-tv-kd14:14.15.6": "How is there business that is not a legal issue? ",
+  "pli-tv-kd14:14.15.5": "this is business that’s also a legal issue arising from business. ",
+  "pli-tv-kd14:14.15.6": "How’s there business that isn’t also a legal issue? ",
   "pli-tv-kd14:14.15.7": "The duty to teacher, the duty to a preceptor, the duty to a co-student, the duty to a co-pupil—",
   "pli-tv-kd14:14.15.8": "this is business that is not a legal issue. ",
   "pli-tv-kd14:14.15.9": "How is there a legal issue that is not business? ",
