Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -867,8 +867,8 @@
   "pli-tv-kd14:14.15.5": "this is business that’s also a legal issue arising from business. ",
   "pli-tv-kd14:14.15.6": "How’s there business that isn’t also a legal issue? ",
   "pli-tv-kd14:14.15.7": "The duty to teacher, the duty to a preceptor, the duty to a co-student, the duty to a co-pupil—",
-  "pli-tv-kd14:14.15.8": "this is business that is not a legal issue. ",
-  "pli-tv-kd14:14.15.9": "How is there a legal issue that is not business? ",
+  "pli-tv-kd14:14.15.8": "this is business that isn’t also a legal issue. ",
+  "pli-tv-kd14:14.15.9": "How’s there a legal issue that isn’t also business? ",
   "pli-tv-kd14:14.15.10": "A legal issue arising from a dispute, a legal issue arising from an accusation, a legal issue arising from an offense—",
   "pli-tv-kd14:14.15.11": "this is a legal issue that is not business. ",
   "pli-tv-kd14:14.15.12": "How is there a legal issue that is also business? ",
