--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -870,7 +870,7 @@
   "pli-tv-kd14:14.15.8": "this is business that isn’t also a legal issue. ",
   "pli-tv-kd14:14.15.9": "How’s there a legal issue that isn’t also business? ",
   "pli-tv-kd14:14.15.10": "A legal issue arising from a dispute, a legal issue arising from an accusation, a legal issue arising from an offense—",
-  "pli-tv-kd14:14.15.11": "this is a legal issue that is not business. ",
+  "pli-tv-kd14:14.15.11": "this is a legal issue that isn’t also business. ",
   "pli-tv-kd14:14.15.12": "How is there a legal issue that is also business? ",
   "pli-tv-kd14:14.15.13": "A legal issue arising from business is a legal issue and also business. ",
   "pli-tv-kd14:14.15.14.0.1": "9. The resolution and settling of legal issues ",
