Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -871,8 +871,8 @@
   "pli-tv-kd14:14.15.9": "How’s there a legal issue that isn’t also business? ",
   "pli-tv-kd14:14.15.10": "A legal issue arising from a dispute, a legal issue arising from an accusation, a legal issue arising from an offense—",
   "pli-tv-kd14:14.15.11": "this is a legal issue that isn’t also business. ",
-  "pli-tv-kd14:14.15.12": "How is there a legal issue that is also business? ",
-  "pli-tv-kd14:14.15.13": "A legal issue arising from business is a legal issue and also business. ",
+  "pli-tv-kd14:14.15.12": "How’s there a legal issue that’s also business? ",
+  "pli-tv-kd14:14.15.13": "A legal issue arising from business is a legal issue and also business.” ",
   "pli-tv-kd14:14.15.14.0.1": "9. The resolution and settling of legal issues ",
   "pli-tv-kd14:14.15.14.0.2": "9.1 Resolution face-to-face ",
   "pli-tv-kd14:14.16.1": "“There are two principles for settling a legal issue arising from a dispute: ",
