Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -880,8 +880,8 @@
   "pli-tv-kd14:14.16.3": "Can it be that a legal issue arising from a dispute should be settled not by majority decision, ",
   "pli-tv-kd14:14.16.4": "but by resolution face-to-face? ",
   "pli-tv-kd14:14.16.5": "It can. ",
-  "pli-tv-kd14:14.16.6": "How is that? ",
-  "pli-tv-kd14:14.16.7": "It may be that monks are disputing, saying, ",
+  "pli-tv-kd14:14.16.6": "How’s that? ",
+  "pli-tv-kd14:14.16.7": "It may be, monks, that monks are disputing, saying, ",
   "pli-tv-kd14:14.16.8": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This was not spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This was not practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This was not laid down by the Buddha’, ‘This is an offense’, ‘This is not an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.16.9": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.16.11": "It has been resolved face-to-face. ",
