Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -882,7 +882,7 @@
   "pli-tv-kd14:14.16.5": "It can. ",
   "pli-tv-kd14:14.16.6": "How’s that? ",
   "pli-tv-kd14:14.16.7": "It may be, monks, that monks are disputing, saying, ",
-  "pli-tv-kd14:14.16.8": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This was not spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This was not practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This was not laid down by the Buddha’, ‘This is an offense’, ‘This is not an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
+  "pli-tv-kd14:14.16.8": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.16.9": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.16.11": "It has been resolved face-to-face. ",
   "pli-tv-kd14:14.16.12": "Face-to-face with what? ",
@@ -892,7 +892,7 @@
   "pli-tv-kd14:14.16.17": "This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: ",
   "pli-tv-kd14:14.16.18": "the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.16.20": "This is the meaning of face-to-face with the persons concerned: ",
-  "pli-tv-kd14:14.16.21": "both sides—those who are disputing and those they are disputing with—are present. ",
+  "pli-tv-kd14:14.16.21": "both sides—those who are disputing and those they’re disputing with—are present. ",
   "pli-tv-kd14:14.16.23": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.16.24": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
   "pli-tv-kd14:14.17.1": "If those monks are unable to resolve that legal issue in that monastery, they should go to another monastery that has a number of monks. ",
