Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -896,16 +896,16 @@
   "pli-tv-kd14:14.16.23": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.16.24": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
   "pli-tv-kd14:14.17.1": "If those monks are unable to resolve that legal issue in that monastery, they should go to another monastery that has a number of monks. ",
-  "pli-tv-kd14:14.17.2": "If they are able to resolve that legal issue while on their way, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.17.4": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.17.2": "If they’re able to resolve that legal issue while on their way, this is called the resolution of a legal issue. ",
+  "pli-tv-kd14:14.17.4": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.17.5": "Face-to-face with what? ",
-  "pli-tv-kd14:14.17.6": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
+  "pli-tv-kd14:14.17.6": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. ",
   "pli-tv-kd14:14.17.7": "… ",
   "pli-tv-kd14:14.17.16": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.17.17": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
   "pli-tv-kd14:14.18.1": "If those monks are unable to resolve that legal issue while on their way, they should go to that other monastery and say to the resident monks, ",
-  "pli-tv-kd14:14.18.2": "‘A legal issue has arisen in such-and-such a way. ",
-  "pli-tv-kd14:14.18.3": "It would be good if you would resolve it according to the Teaching, the Monastic Law, and the Teacher’s instruction, so that this legal issue may be properly disposed of.’ ",
+  "pli-tv-kd14:14.18.2": "‘This legal issue has come about in such-and-such a way. ",
+  "pli-tv-kd14:14.18.3": "Please resolve it, Venerables, according to the Teaching, the Monastic Law, and the Teacher’s instruction, so that this legal issue may be properly disposed of.’ ",
   "pli-tv-kd14:14.18.4": "If the resident monks are senior to the visiting monks, the resident monks should say, ",
   "pli-tv-kd14:14.18.5": "‘Now, Venerables, please go to one side for a moment while we discuss this matter.’ ",
   "pli-tv-kd14:14.18.6": "If the visiting monks are senior to the resident monks, the resident monks should say, ",
@@ -915,10 +915,10 @@
   "pli-tv-kd14:14.18.10": "But if they think, ",
   "pli-tv-kd14:14.18.11": "‘We’re able to resolve this legal issue according to the Teaching, the Monastic Law, and the Teacher’s instruction,’ ",
   "pli-tv-kd14:14.18.12": "then they should say to the visiting monks, ",
-  "pli-tv-kd14:14.18.13": "‘If you’ll tell us how this legal issue arose, we’ll be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. ",
-  "pli-tv-kd14:14.18.14": "In this way we’ll take it on. ",
-  "pli-tv-kd14:14.18.15": "If, however, you won’t tell us how this legal issue arose, we won’t be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. We won’t take it on.’ ",
-  "pli-tv-kd14:14.18.16": "Dealing properly with the case in this way, the resident monks should take on that legal issue. ",
+  "pli-tv-kd14:14.18.13": "‘If you’ll tell us how this legal issue came about, we’ll be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. ",
+  "pli-tv-kd14:14.18.14": "And so we’ll take it on. ",
+  "pli-tv-kd14:14.18.15": "If, however, you won’t tell us, we won’t be able to properly dispose of it. And so we won’t take it on.’ ",
+  "pli-tv-kd14:14.18.16": "Having properly examined it like this, the resident monks should take it on. ",
   "pli-tv-kd14:14.18.17": "The visiting monks should say this to the resident monks, ",
   "pli-tv-kd14:14.18.18": "‘We’ll tell you how this legal issue arose. ",
   "pli-tv-kd14:14.18.19": "If you’re able to dispose of this legal issue properly by such and such a deadline—according to the Teaching, the Monastic Law, and the Teacher’s instruction—",
