--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -920,9 +920,9 @@
   "pli-tv-kd14:14.18.15": "If, however, you won’t tell us, we won’t be able to properly dispose of it. And so we won’t take it on.’ ",
   "pli-tv-kd14:14.18.16": "Having properly examined it like this, the resident monks should take it on. ",
   "pli-tv-kd14:14.18.17": "The visiting monks should say this to the resident monks, ",
-  "pli-tv-kd14:14.18.18": "‘We’ll tell you how this legal issue arose. ",
-  "pli-tv-kd14:14.18.19": "If you’re able to dispose of this legal issue properly by such and such a deadline—according to the Teaching, the Monastic Law, and the Teacher’s instruction—",
-  "pli-tv-kd14:14.18.20": "then we’ll hand this legal issue over to you. ",
+  "pli-tv-kd14:14.18.18": "‘We’ll tell you how this legal issue came about. ",
+  "pli-tv-kd14:14.18.19": "If you’re able to dispose of it properly by such and such means—according to the Teaching, the Monastic Law, and the Teacher’s instruction—",
+  "pli-tv-kd14:14.18.20": "then we’ll hand it over to you. ",
   "pli-tv-kd14:14.18.21": "If you’re unable to dispose of this legal issue properly by such and such a deadline—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then we won’t hand this legal issue over to you. ",
   "pli-tv-kd14:14.18.22": "We’ll take responsibility for this legal issue ourselves.’ ",
   "pli-tv-kd14:14.18.23": "Dealing properly with the case in this way, the visiting monks should hand that legal issue over to the resident monks. ",
