--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -927,15 +927,15 @@
   "pli-tv-kd14:14.18.22": "We’ll take responsibility for it ourselves.’ ",
   "pli-tv-kd14:14.18.23": "Having properly examined it like this, the visiting monks should hand it over to the resident monks. ",
   "pli-tv-kd14:14.18.24": "If those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.18.26": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.18.26": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.18.27": "Face-to-face with what? ",
-  "pli-tv-kd14:14.18.28": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. … ",
+  "pli-tv-kd14:14.18.28": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. … ",
   "pli-tv-kd14:14.18.29": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.18.30": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession. ",
+  "pli-tv-kd14:14.18.30": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.19.0": "9.2 Resolution by committee ",
-  "pli-tv-kd14:14.19.1": "“If, while they are discussing that legal issue, there is endless talk, but not a single statement that's clear, then they should resolve that legal issue by means of a committee. ",
+  "pli-tv-kd14:14.19.1": "“If, monks, while they’re discussing that legal issue, there’s endless talk, but not a single statement that's clear, then they should resolve that legal issue by means of a committee. ",
   "pli-tv-kd14:14.19.2": "A monk who has ten qualities may be appointed to that committee: ",
-  "pli-tv-kd14:14.19.3": "One who is virtuous and restrained by the Monastic Code. His conduct is good, he associates with the right people, and he sees danger in minor faults. He undertakes and trains in the training rules. ",
+  "pli-tv-kd14:14.19.3": "One who’s virtuous and restrained by the Monastic Code. His conduct is good, he associates with the right people, and he sees danger in minor faults. He undertakes and trains in the training rules. ",
   "pli-tv-kd14:14.19.4": "One who has learned much, and who retains and accumulates what he’s learned. Those teachings that are good in the beginning, good in the middle, and good in the end, that have a true goal and are well articulated, and that set out the perfectly complete and pure spiritual life—he’s learned many such teachings, retained them in mind, recited them verbally, mentally investigated them, and penetrated them well by view. ",
   "pli-tv-kd14:14.19.5": "One who has properly learned both Monastic Codes in detail; who has analyzed them well, thoroughly mastered them, and investigated them well, both in terms of the rules and their detailed exposition. ",
   "pli-tv-kd14:14.19.6": "One who is firmly committed to the Monastic Law. ",
