Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -954,12 +954,12 @@
   "pli-tv-kd14:14.20.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.20.8": "While we were discussing this legal issue, there was endless talk, but not a single statement that was clear. ",
   "pli-tv-kd14:14.20.9": "The Sangha appoints monk so-and-so and monk so-and-so to a committee to resolve this legal issue. ",
-  "pli-tv-kd14:14.20.10": "Any monk who approves of appointing monk so-and-so and monk so-and-so to a committee to resolve this legal issue should remain silent. ",
+  "pli-tv-kd14:14.20.10": "Any monk who approves of appointing monk so-and-so and monk so-and-so to a committee should remain silent. ",
   "pli-tv-kd14:14.20.11": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.20.12": "The Sangha has appointed monk so-and-so and monk so-and-so to a committee to resolve this legal issue. ",
   "pli-tv-kd14:14.20.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.21.1": "If those monks are able to resolve that legal issue by committee, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.21.3": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.21.3": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.21.4": "Face-to-face with what? ",
   "pli-tv-kd14:14.21.5": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. This is the meaning of face-to-face with the persons concerned: both sides—those who are disputing and those they are disputing with—are present. ",
   "pli-tv-kd14:14.21.6": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
