Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -966,9 +966,9 @@
   "pli-tv-kd14:14.22.1": "While those monks are discussing that legal issue, there may be a monk there who’s an expounder of the Teaching, but who doesn’t know the Monastic Code or its analysis. Not understanding the meaning, he denies it by obscuring it with the wording. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:14.22.2": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:14.22.3": "The monk so-and-so is an expounder of the Teaching, ",
-  "pli-tv-kd14:14.22.4": "He doesn’t know the Monastic Code or its analysis. ",
-  "pli-tv-kd14:14.22.5": "Not understanding the meaning, he blocks it out by covering it over with the wording. ",
-  "pli-tv-kd14:14.22.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, and the remainder of us should resolve this legal issue.’ ",
+  "pli-tv-kd14:14.22.4": "but doesn’t know the Monastic Code or its analysis. ",
+  "pli-tv-kd14:14.22.5": "Not understanding the meaning, he denies it by obscuring it with the wording. ",
+  "pli-tv-kd14:14.22.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, with the remainder of us resolving this legal issue.’ ",
   "pli-tv-kd14:14.22.7": "If, after that monk has left, those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.22.9": "It has been resolved face-to-face. ",
   "pli-tv-kd14:14.22.10": "Face-to-face with what? ",
