Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -970,15 +970,15 @@
   "pli-tv-kd14:14.22.5": "Not understanding the meaning, he denies it by obscuring it with the wording. ",
   "pli-tv-kd14:14.22.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, with the remainder of us resolving this legal issue.’ ",
   "pli-tv-kd14:14.22.7": "If, after that monk has left, those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.22.9": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.22.9": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.22.10": "Face-to-face with what? ",
-  "pli-tv-kd14:14.22.11": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. … ",
+  "pli-tv-kd14:14.22.11": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. … ",
   "pli-tv-kd14:14.22.12": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
-  "pli-tv-kd14:14.23.1": "While those monks are discussing that legal issue, there may be a monk there who is an expounder of the Teaching. He knows the Monastic Code, but not its analysis. Not understanding the meaning, he obstructs it by prioritizing the wording. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd14:14.23.1": "While those monks are discussing that legal issue, there may be a monk there who’s an expounder of the Teaching. He knows the Monastic Code, but not its analysis. Not understanding the meaning, he denies it by obscuring it with the wording. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:14.23.2": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:14.23.3": "The monk so-and-so is an expounder of the Teaching. ",
   "pli-tv-kd14:14.23.4": "He knows the Monastic Code, but not its analysis. ",
-  "pli-tv-kd14:14.23.5": "Not understanding the meaning, he blocks it out by covering it over with the wording. ",
+  "pli-tv-kd14:14.23.5": "Not understanding the meaning, he denies it by obscuring it with the wording. ",
   "pli-tv-kd14:14.23.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, and the remainder of us should resolve this legal issue.’ ",
   "pli-tv-kd14:14.23.7": "If, after that monk has left, those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.23.9": "It has been resolved face-to-face. ",
