Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -979,12 +979,12 @@
   "pli-tv-kd14:14.23.3": "The monk so-and-so is an expounder of the Teaching. ",
   "pli-tv-kd14:14.23.4": "He knows the Monastic Code, but not its analysis. ",
   "pli-tv-kd14:14.23.5": "Not understanding the meaning, he denies it by obscuring it with the wording. ",
-  "pli-tv-kd14:14.23.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, and the remainder of us should resolve this legal issue.’ ",
+  "pli-tv-kd14:14.23.6": "If it seems appropriate to you, we should ask monk so-and-so to leave, with the remainder of us resolving this legal issue.’ ",
   "pli-tv-kd14:14.23.7": "If, after that monk has left, those monks are able to resolve that legal issue, this is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.23.9": "It has been resolved face-to-face. ",
+  "pli-tv-kd14:14.23.9": "It’s been resolved face-to-face. ",
   "pli-tv-kd14:14.23.10": "Face-to-face with what? ",
-  "pli-tv-kd14:14.23.11": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. … ",
-  "pli-tv-kd14:14.23.12": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
+  "pli-tv-kd14:14.23.11": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. … ",
+  "pli-tv-kd14:14.23.12": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening.” ",
   "pli-tv-kd14:14.24.0": "9.3 Resolution by majority decision ",
   "pli-tv-kd14:14.24.1": "“If those monks are unable to resolve that legal issue by committee, they should hand it over to the Sangha, saying, ",
   "pli-tv-kd14:14.24.2": "‘Venerables, we’re unable to resolve this legal issue by committee. May the Sangha resolve this legal issue.’ ",
