--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -986,8 +986,8 @@
   "pli-tv-kd14:14.23.11": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. … ",
   "pli-tv-kd14:14.23.12": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening.” ",
   "pli-tv-kd14:14.24.0": "9.3 Resolution by majority decision ",
-  "pli-tv-kd14:14.24.1": "“If those monks are unable to resolve that legal issue by committee, they should hand it over to the Sangha, saying, ",
-  "pli-tv-kd14:14.24.2": "‘Venerables, we’re unable to resolve this legal issue by committee. May the Sangha resolve this legal issue.’ ",
+  "pli-tv-kd14:14.24.1": "“If, monks, those monks are unable to resolve that legal issue by committee, they should hand it over to the Sangha, saying, ",
+  "pli-tv-kd14:14.24.2": "‘Venerables, we’re unable to resolve this legal issue by committee. Can the Sangha please resolve it.’ ",
   "pli-tv-kd14:14.24.3": "I allow such a legal issue to be resolved by majority decision. ",
   "pli-tv-kd14:14.24.4": "A monk who has five qualities should be appointed as the manager of the vote: ",
   "pli-tv-kd14:14.24.5": "one who isn’t swayed by desire, ill will, confusion, or fear, and who knows who has and who hasn't voted. ",
