--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -997,7 +997,7 @@
   "pli-tv-kd14:14.24.9": "If it seems appropriate to the Sangha, the Sangha should appoint monk so-and-so as the manager of the vote. ",
   "pli-tv-kd14:14.24.10": "This is the motion. ",
   "pli-tv-kd14:14.24.11": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:14.24.12": "The Sangha appoints monk so-and-so as the manager of the vote ",
+  "pli-tv-kd14:14.24.12": "The Sangha appoints monk so-and-so as the manager of the vote. ",
   "pli-tv-kd14:14.24.13": "Any monk who approves of appointing monk so-and-so as the manager of the vote should remain silent. ",
   "pli-tv-kd14:14.24.14": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.24.15": "The Sangha has appointed monk so-and-so as the manager of the vote. ",
