--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1002,10 +1002,10 @@
   "pli-tv-kd14:14.24.14": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.24.15": "The Sangha has appointed monk so-and-so as the manager of the vote. ",
   "pli-tv-kd14:14.24.16": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
-  "pli-tv-kd14:14.24.17": "That monk should then distribute the voting tickets. ",
+  "pli-tv-kd14:14.24.17": "That monk should then distribute the ballots. ",
   "pli-tv-kd14:14.24.18": "If the majority of monks vote in accordance with the Teaching, then that legal issue has been resolved. ",
   "pli-tv-kd14:14.24.19": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.24.21": "It has been resolved face-to-face and by majority decision. ",
+  "pli-tv-kd14:14.24.21": "It’s been resolved face-to-face and by majority decision. ",
   "pli-tv-kd14:14.24.22": "Face-to-face with what? ",
   "pli-tv-kd14:14.24.23": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
   "pli-tv-kd14:14.24.24": "This is the meaning of face-to-face with the Sangha: ",
