Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1007,10 +1007,10 @@
   "pli-tv-kd14:14.24.19": "This is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.24.21": "It’s been resolved face-to-face and by majority decision. ",
   "pli-tv-kd14:14.24.22": "Face-to-face with what? ",
-  "pli-tv-kd14:14.24.23": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. ",
+  "pli-tv-kd14:14.24.23": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. ",
   "pli-tv-kd14:14.24.24": "This is the meaning of face-to-face with the Sangha: ",
   "pli-tv-kd14:14.24.25": "the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. ",
-  "pli-tv-kd14:14.24.27": "This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: ",
+  "pli-tv-kd14:14.24.27": "This is the meaning of face-to-face with the Teaching and the Monastic Law: ",
   "pli-tv-kd14:14.24.28": "the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.24.30": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.24.31": "both sides—those who are disputing and those they are disputing with—are present. ",
