Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1013,15 +1013,15 @@
   "pli-tv-kd14:14.24.27": "This is the meaning of face-to-face with the Teaching and the Monastic Law: ",
   "pli-tv-kd14:14.24.28": "the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.24.30": "This is the meaning of face-to-face with the persons concerned: ",
-  "pli-tv-kd14:14.24.31": "both sides—those who are disputing and those they are disputing with—are present. ",
-  "pli-tv-kd14:14.24.33": "This is the meaning of majority decision: ",
+  "pli-tv-kd14:14.24.31": "both sides—those who are disputing and those they’re disputing with—are present. ",
+  "pli-tv-kd14:14.24.33": "This is the meaning of by majority decision: ",
   "pli-tv-kd14:14.24.34": "the doing of, the performing of, the participation in, the consent to, the agreement to, the non-objection to that legal procedure of majority decision. ",
   "pli-tv-kd14:14.24.36": "When a legal issue has been resolved like this, if any of the participants reopen it, they incur an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.24.37": "If anyone who gave their consent criticizes the resolution, they incur an offense entailing confession.” ",
   "pli-tv-kd14:14.25.0": "9.4 The three kinds of voting ",
-  "pli-tv-kd14:14.25.1": "At one time at Sāvatthī a legal issue had arisen in this way. ",
+  "pli-tv-kd14:14.25.1": "At one time at Sāvatthī a legal issue had come about in this way. ",
   "pli-tv-kd14:14.25.2": "But those monks ",
-  "pli-tv-kd14:14.25.3": "were dissatisfied with how the Sangha at Sāvatthī had resolved that legal issue. ",
+  "pli-tv-kd14:14.25.3": "were dissatisfied with how the Sangha at Sāvatthī had resolved it. ",
   "pli-tv-kd14:14.25.4": "They heard that in a certain monastery there was a number of senior monks who were learned and masters of the tradition; who were experts on the Teaching, the Monastic Law, and the Key Terms; who were knowledgeable and competent, had a sense of conscience, and were afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd14:14.25.5": "They thought, “If these senior monks resolve this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.6": "They then went to that monastery and said to those senior monks, ",
