--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1032,12 +1032,12 @@
   "pli-tv-kd14:14.25.11": "and they resolved it in the same way. ",
   "pli-tv-kd14:14.25.12": "Those monks ",
   "pli-tv-kd14:14.25.13": "were dissatisfied with how the Sangha at Sāvatthī had resolved that legal issue and also with how that number of senior monks had resolved it. ",
-  "pli-tv-kd14:14.25.14": "But they heard that in a certain monastery there were three senior monks … ",
+  "pli-tv-kd14:14.25.14": "They then heard that in a certain monastery there were three senior monks … ",
   "pli-tv-kd14:14.25.15": "two senior monks … ",
   "pli-tv-kd14:14.25.16": "one senior monk who was learned and a master of the tradition; who was an expert on the Teaching, the Monastic Law, and the Key Terms; who was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd14:14.25.17": "They thought, “If this senior monk resolves this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.18": "They then went to that monastery and said to that senior monk, ",
-  "pli-tv-kd14:14.25.19": "“This legal issue has arisen in this way. ",
+  "pli-tv-kd14:14.25.19": "“This legal issue has come about in this way. ",
   "pli-tv-kd14:14.25.20": "It would be good, Venerable, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.21": "That senior monk thought, ",
   "pli-tv-kd14:14.25.22": "“This legal issue was properly disposed of by the Sangha at Sāvatthī, and likewise by that number of senior monks, by those three senior monks, and by those two senior monks,” ",
