Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1046,8 +1046,8 @@
   "pli-tv-kd14:14.25.25": "The Buddha said, “Monks, this legal issue has been settled, laid to rest, and properly disposed of. ",
   "pli-tv-kd14:14.26.1": "To persuade those monks, I allow three kinds of voting: ",
   "pli-tv-kd14:14.26.2": "a secret ballot, whispering in the ear, and an open vote. ",
-  "pli-tv-kd14:14.26.3": "What is a secret vote? ",
-  "pli-tv-kd14:14.26.4": "The manager of the vote should make voting tickets of two different colors, go up to the monks one by one and say, ",
+  "pli-tv-kd14:14.26.3": "What’s a secret ballot? ",
+  "pli-tv-kd14:14.26.4": "The manager of the vote should make ballots of two different colors, go up to the monks one by one and say, ",
   "pli-tv-kd14:14.26.5": "‘This is the voting ticket for those who hold this view, and this is the voting ticket for those who hold that view. ",
   "pli-tv-kd14:14.26.6": "Take the one you like.’ ",
   "pli-tv-kd14:14.26.7": "When someone has taken a voting ticket, he should be told, ",
