--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1048,15 +1048,15 @@
   "pli-tv-kd14:14.26.2": "a secret ballot, whispering in the ear, and an open vote. ",
   "pli-tv-kd14:14.26.3": "What’s a secret ballot? ",
   "pli-tv-kd14:14.26.4": "The manager of the vote should make ballots of two different colors, go up to the monks one by one and say, ",
-  "pli-tv-kd14:14.26.5": "‘This is the voting ticket for those who hold this view, and this is the voting ticket for those who hold that view. ",
+  "pli-tv-kd14:14.26.5": "‘This is the ballot for those who hold this view, and this is the ballot for those who hold that view. ",
   "pli-tv-kd14:14.26.6": "Take the one you like.’ ",
-  "pli-tv-kd14:14.26.7": "When someone has taken a voting ticket, he should be told, ",
+  "pli-tv-kd14:14.26.7": "When anyone has taken a ballot, they should be told, ",
   "pli-tv-kd14:14.26.8": "‘Don’t show it to anyone.’ ",
   "pli-tv-kd14:14.26.9": "If the manager knows that ",
-  "pli-tv-kd14:14.26.10": "those who speak contrary to the Teaching are in the majority, then that vote is invalid and to be postponed. ",
+  "pli-tv-kd14:14.26.10": "those who speak contrary to the Teaching are in the majority, then the vote is invalid and to be postponed. ",
   "pli-tv-kd14:14.26.11": "If he knows that ",
-  "pli-tv-kd14:14.26.12": "those who speak in accordance with the Teaching are in the majority, then that vote is valid and is to be announced. ",
-  "pli-tv-kd14:14.26.14": "What is a vote by whispering in the ear? ",
+  "pli-tv-kd14:14.26.12": "those who speak in accordance with the Teaching are in the majority, then the vote is valid and to be announced. ",
+  "pli-tv-kd14:14.26.14": "What’s voting by whispering in the ear? ",
   "pli-tv-kd14:14.26.15": "The manager of the vote should inform the monks one by one by whispering in the ear, ",
   "pli-tv-kd14:14.26.16": "‘This is the voting ticket for those who hold this view, and this is the voting ticket for those who hold that view. ",
   "pli-tv-kd14:14.26.17": "Take the one you like.’ ",
