Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1058,15 +1058,15 @@
   "pli-tv-kd14:14.26.12": "those who speak in accordance with the Teaching are in the majority, then the vote is valid and to be announced. ",
   "pli-tv-kd14:14.26.14": "What’s voting by whispering in the ear? ",
   "pli-tv-kd14:14.26.15": "The manager of the vote should inform the monks one by one by whispering in the ear, ",
-  "pli-tv-kd14:14.26.16": "‘This is the voting ticket for those who hold this view, and this is the voting ticket for those who hold that view. ",
+  "pli-tv-kd14:14.26.16": "‘This is the ballot for those who hold this view, and this is the ballot for those who hold that view. ",
   "pli-tv-kd14:14.26.17": "Take the one you like.’ ",
-  "pli-tv-kd14:14.26.18": "When someone has taken a voting ticket, he should be told, ",
+  "pli-tv-kd14:14.26.18": "When someone has taken a ballot, they should be told, ",
   "pli-tv-kd14:14.26.19": "‘Don’t tell anyone.’ ",
   "pli-tv-kd14:14.26.20": "If the manager knows that ",
-  "pli-tv-kd14:14.26.21": "those who speak contrary to the Teaching are in the majority, then that vote is invalid and to be postponed. ",
+  "pli-tv-kd14:14.26.21": "those who speak contrary to the Teaching are in the majority, then the vote is invalid and to be postponed. ",
   "pli-tv-kd14:14.26.22": "If he knows that ",
-  "pli-tv-kd14:14.26.23": "those who speak in accordance with the Teaching are in the majority, then that vote is valid and is to be announced. ",
-  "pli-tv-kd14:14.26.25": "What is an open vote? ",
+  "pli-tv-kd14:14.26.23": "those who speak in accordance with the Teaching are in the majority, then the vote is valid and to be announced. ",
+  "pli-tv-kd14:14.26.25": "What’s an open vote? ",
   "pli-tv-kd14:14.26.26": "If he knows that ",
   "pli-tv-kd14:14.26.27": "those who speak in accordance with the Teaching are in the majority, the voting tickets should be distributed openly.” ",
   "pli-tv-kd14:14.27.0": "9.5 Resolution through recollection ",
