Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1068,7 +1068,7 @@
   "pli-tv-kd14:14.26.23": "those who speak in accordance with the Teaching are in the majority, then the vote is valid and to be announced. ",
   "pli-tv-kd14:14.26.25": "What’s an open vote? ",
   "pli-tv-kd14:14.26.26": "If he knows that ",
-  "pli-tv-kd14:14.26.27": "those who speak in accordance with the Teaching are in the majority, the voting tickets should be distributed openly.” ",
+  "pli-tv-kd14:14.26.27": "those who speak in accordance with the Teaching are in the majority, the ballots should be distributed openly.” ",
   "pli-tv-kd14:14.27.0": "9.5 Resolution through recollection ",
   "pli-tv-kd14:14.27.2": "“There are four principles for settling a legal issue arising from an accusation: ",
   "pli-tv-kd14:14.27.3": "resolution face-to-face, resolution through recollection, resolution because of past insanity, and by further penalty. ",
