--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1104,7 +1104,7 @@
   "pli-tv-kd14:14.27.33": "Because of his great clarity of memory, the Sangha has granted monk so-and-so resolution through recollection. ",
   "pli-tv-kd14:14.27.34": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.27.35": "This is called the resolution of a legal issue. ",
-  "pli-tv-kd14:14.27.37": "It has been resolved by resolution face-to-face and by resolution through recollection. ",
+  "pli-tv-kd14:14.27.37": "It’s been resolved by resolution face-to-face and by resolution through recollection. ",
   "pli-tv-kd14:14.27.38": "Face-to-face with what? ",
   "pli-tv-kd14:14.27.39": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.27.40": "This is the meaning of face-to-face with the persons concerned: ",
