--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1106,7 +1106,7 @@
   "pli-tv-kd14:14.27.35": "This is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.27.37": "It’s been resolved by resolution face-to-face and by resolution through recollection. ",
   "pli-tv-kd14:14.27.38": "Face-to-face with what? ",
-  "pli-tv-kd14:14.27.39": "Face-to-face with the Sangha, face-to-face with the Teaching, face-to-face with the Monastic Law, face-to-face with the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching, face-to-face with the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
+  "pli-tv-kd14:14.27.39": "Face-to-face with the Sangha, the Teaching, the Monastic Law, and the persons concerned. This is the meaning of face-to-face with the Sangha: the monks who should be present have arrived, consent has been brought for those who are eligible to give their consent, and no one present objects to the decision. This is the meaning of face-to-face with the Teaching and the Monastic Law: the Teaching, the Monastic Law, the Teacher’s instruction—that by which that legal issue is resolved. ",
   "pli-tv-kd14:14.27.40": "This is the meaning of face-to-face with the persons concerned: ",
   "pli-tv-kd14:14.27.41": "both those who are accusing and those who have been accused are present. ",
   "pli-tv-kd14:14.27.43": "This is the meaning of resolution through recollection: ",
